syntax = "proto3";

package fields;

enum ResponseStatus {
	ERROR = 0;
	SUCCESS = 1;
	EMPTY = 2;
}

message ResponseMessage {
	string Msg = 1;
}

message CommonResponse {
	ResponseStatus Status = 1;
	ResponseMessage Msg = 2;
}

message PagesResponse {
	int64 count = 1;
	bool next = 2;		// 是否还有后续数据，是否还有下一页
}

// 请求的签名
message CommonRequest {
	string Timestamp = 1;
	string Sign = 2;
}

message IDRequest {
	int64 ID = 1;
}

message SignRequest {
	string Sign = 1;
}